--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Tic-Tac-Toe</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <script src="./index.js" defer></script>
+    <title>Tic Tac Toe</title>
   </head>
   <body>
-    <div class="board" id="board">
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-    </div>
-    <div class="winning-message" id="winningMessage">
-      <div id="winningMessageText"></div>
-      <button id="restartButton">Restart</button>
+    <h1>Tic-Tac-Toe</h1>
+    <h2>It's X's turn!</h2>
+    <div class="flex-container flex-column">
+      <div class="flex-container flex-wrap" id="board">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
+      <button id="reset-button">reset</button>
     </div>
   </body>
 </html>
